@@ -1,3 +1,8 @@
+2007-02-15  Brandon Hale  <brandon@brandonhale.us>
+
+	* src/Driver.cs, src/TrayIcon.cs, po/POTFILES.in:
+	Patch from Lukasz Jernas on bug #399380, i18n for tray icon
+
 2007-02-09  Brandon Hale  <brandon@ubuntu.com>
 
 	* src/dbus-sharp:
